2009-06-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: follow MS docs when throwing
	ProtocolViolationException at the beginning of an asynchronous
	operation. Fixes bug #465613.

2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebConnectionStream.cs: throw a WebException instead of an IOException.

2009-06-08 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: avoid exception when the reply from the server
	contains just response code. Fixes bug #510852.

2009-06-05  Robert Jordan  <robertj@gmx.net>

	* WebClient.cs (UploadValuesCore): Encode POST arguments with UTF-8.
	Fixes bug #484795.

2009-06-02 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebRequest.cs: KeepAlive check not needed.
	Fixes bug #465613.

2009-06-02 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpConnection.cs: unbind the context after every read for keep-alive
	connections.
	Bug #502274 fixed.

2009-05-16 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpWebResponse.cs:
	* HttpWebRequest.cs: support automatic decompression of the response.
	Fixes bug #504391.


2009-05-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Dns.cs: made GetHostAddresses and friends internal for 1.x
	* EndpointPermission.cs: use GetHostAddresses.

2009-05-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* CookieContainer.cs: matching hosts to domain names like MS does.
	Bug #421827 fixed.

2009-04-06 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: send REST after PASV to avoid some servers
	forgetting aboout it.
	Bug #491590 fixed.

2009-03-24 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebRequest.cs: we were sending CWD instead of PWD.
	Bug #486703 fixed.

2009-02-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* WebClient.cs: append the QueryString in DownloadData.
	Fixes bug #323788.

2009-02-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* FtpWebResponse.cs: return a Null stream when there's no response to